--- a/templates/machines/machine-delete.html
+++ b/templates/machines/machine-delete.html
@@ -1,6 +1,9 @@
 {% extends 'base/base.html' %}
 
 {% block title %}Delete {{ machine.name }}{% endblock title %}
+{% block header %}DELETE HANDLER{% endblock header %}
+
+
 {% block page_content %}
 
     <div class="col-5">
