--- a/templates/machines/machine-edit.html
+++ b/templates/machines/machine-edit.html
@@ -1,14 +1,19 @@
 {% extends 'base/base.html' %}
 
 {% block title %}{{ machine.name }} edit{% endblock title %}
+{% block header %}Edit Machine{% endblock header %}
+
+
 
 {% block page_content %}
-    <div>
+    <div class="container align-items-start justify-content-start">
         <form method="post" action="{% url 'machine edit' pk=machine.pk %}" enctype="multipart/form-data">
             {% for field in form %}
+                <p>
                 <div class="form-group">
                     {{ field }}
                 </div>
+                </p>
             {% endfor %}
 
             <button type="submit" class="btn btn-primary">Save</button>
@@ -20,15 +25,8 @@
         </form>
     </div>
 
-    </form>
-
-
 
 {% endblock page_content %}
-
-
-
-
 
 
 
