--- a/templates/machines/machines_list.html
+++ b/templates/machines/machines_list.html
@@ -3,24 +3,16 @@
 
 {% block title %}Issues{% endblock title %}
 
-{% block page_content %}
-    <!-- Header-->
-    <header class="bg-success py-5">
-        <div class="container px-4 px-lg-5 my-1">
-            <div class="text-center text-white">
-                <h1 class="display-4 fw-bolder">Issues overview</h1>
+{% block header %}Machines overview{% endblock header %}
 
-                {#                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>#}
-            </div>
-        </div>
-    </header>
-    <!-- Section-->
+{% block page_content %}
+
     <section class="py-5">
-{#        {% if request.user.position == "maintenance" or request.user.position == 'admin'%}#}
-{#            <div class="text-center">#}
-{#                <a class="btn btn-warning" href="{% url 'machine create' %}">Create new Machine</a>#}
-{#            </div>#}
-{#        {% endif %}#}
+        {% if request.user.position == "maintenance" or request.user.position == 'admin' %}
+            <div class="text-center">
+                <a class="btn btn-warning" href="{% url 'machine create' %}">Create new Machine</a>
+            </div>
+        {% endif %}
         <div class="container px-4 px-lg-5 mt-5">
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                 {% for machine in object_list %}
@@ -28,9 +20,10 @@
                         <div class="card h-100">
                             <!-- Product image-->
                             {% if machine.image %}
-                                <img class="card-img-top" src="{{ machine.image.url }}"/>
+                                <img class="card-img-top" src="{{ machine.image.url }}">
                             {% else %}
-                                <img class="card-img-top" src="{% static 'images/machines/dummy_machine.jpg' %}">
+                                <img class="card-img-top" src="{% static 'images/machines/dummy_machine.jpg' %}"
+                                     alt="Machine.img">
                             {% endif %}
                             <!-- Product details-->
                             <div class="card-body p-4">
