--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block title %}Maintenance Helper{% endblock title %}
+{% block header %}Maintenance Helper{% endblock header %}
 
 {% block page_content %}
 
