--- a/templates/issues/issues_list.html
+++ b/templates/issues/issues_list.html
@@ -27,7 +27,7 @@
                 <table class="table table-striped">
                     <thead>
                     <tr>
-                        <th scope="col">{{ ID }}</th>
+                        <th scope="col">ID</th>
                         <th scope="col">Status</th>
                         <th scope="col">Machine</th>
                         <th scope="col">Description</th>
