--- a/templates/accounts/profile-delete.html
+++ b/templates/accounts/profile-delete.html
@@ -1,28 +1,20 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Delete Profile</title>
-</head>
+{% extends 'base/base.html' %}
 
-<body>
-<header>
-    {% include 'base/nav.html' %}
-</header>
+{% block title %}Delete Profile{% endblock title %}
 
-<h2>Are you sure that you want to delete user {{ user.get_full_name }}</h2>
-<form method="post" action="{% url 'delete user' pk=user.pk %}">
-    {{ form.as_p }}
-    <input type="submit" value="Delete">
-    {% csrf_token %}
-</form>
+{% block page_content %}
 
-<a href="{% url 'details user' pk=user.pk %}">
-    <button>Back</button>
-</a>
+    <h2 class="text text-danger">Are you sure that you want to delete user {{ user.get_full_name }}</h2>
+    <div class="container my-4">
+        <form method="post" action="{% url 'delete user' pk=user.pk %}">
+            {{ form.as_p }}
+            <input class="btn btn-danger" type="submit" value="Delete">
+            {% csrf_token %}
+        </form>
 
-</body>
-</html>
+
+        <a class="btn btn-primary mx-2 my-5" href="{% url 'details user' pk=user.pk %}">Back</a>
+
+    </div>
+
+{% endblock page_content %}
