--- a/templates/issues/issue-create.html
+++ b/templates/issues/issue-create.html
@@ -3,14 +3,17 @@
 
 
 {% block page_content %}
+    <div class="container mx-3">
 
-    <form method="post" action="{% url 'issue create' %}">
-        <br>
-        <div class="form-group">
-            {{ form.as_p }}
-            <input type="submit" value="Create Issue">
-            {% csrf_token %}
-        </div>
-    </form>
+        <form method="post" action="{% url 'issue create' %}">
+            <br>
+            <div class="form-group">
+                {{ form.as_p }}
+                <a class="btn btn-primary" href="{% url 'index' %}">Back</a>
+                <input class="btn btn-warning mx-3" type="submit" value="Create Issue">
+                {% csrf_token %}
+            </div>
+        </form>
+    </div>
 
 {% endblock page_content %}
