--- a/templates/issues/issue-edit.html
+++ b/templates/issues/issue-edit.html
@@ -1,15 +1,19 @@
 {% extends 'base/base.html' %}
 
 {% block page_content %}
-    <div class="container px-1">
-        <form method="post" action="{% url 'issue edit' pk=issue.pk %}">
-            {{ form.as_p }}
-            {% if request.user.position in 'maintenance, technician' %}
-                <input class="btn-primary" type="submit" value="Save">
-                <input class="btn-warning" type="submit" value="Close Issue" name="close issue">
-            {% endif %}
-            {% csrf_token %}
-        </form>
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 align-items-center my-5">
+            <div class="col-lg-6 gx-3">
+                <form method="post" action="{% url 'issue edit' pk=issue.pk %}">
+                    {{ form.as_p }}
+                    {% if request.user.position in 'maintenance, technician, admin' %}
+                        <input class="btn-primary" type="submit" value="Save">
+                        <input class="btn-warning" type="submit" value="Close Issue" name="close issue">
+                    {% endif %}
+                    {% csrf_token %}
+                </form>
+            </div>
+        </div>
     </div>
 
 {% endblock page_content %}
